--- a/portfolio.html
+++ b/portfolio.html
@@ -37,13 +37,23 @@
       </nav>
 
       <ul class="li-contact">
+        <li></li>
         <li>
-          <a class="top-contact1" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
+          <a class="top-contact1 icons-header" href="mailto:info@devstudio.com">
+            <svg class="icon-spacing" width="16" height="12">
+              <use xlink:href="./images/sprite.svg#email-logo"></use>
+            </svg>
+
+            info@devstudio.com</a
           >
         </li>
         <li>
-          <a class="top-contact" href="tel:+48111111111">+48 111 111 111</a>
+          <a class="top-contact icons-header" href="tel:+48111111111"
+            ><svg class="icon-spacing" width="10" height="16">
+              <use xlink:href="./images/sprite.svg#smartphone-logo"></use>
+            </svg>
+            +48 111 111 111</a
+          >
         </li>
       </ul>
     </header>
@@ -190,23 +200,68 @@
       </section>
     </main>
     <footer class="footer">
-      <section class="container">
-        <a class="logo" href="index.html">Web<span>Studio</span></a>
+     
+      <section class="container-footer">
+        <div class="footer-contacts"></div>
+        <a class="logo" href="index.html"
+          >Web<span class="logo-bottom">Studio</span></a
+        >
+
         <address>
-          <ul class>
+          <ul>
             <li class="address-bottom">m. Warszawa, Aleje Jerozolimskie 21</li>
             <li>
-              <a class="contact-bottom" href="mailto:info@example.com"
-                >info@example.com</a
+              <a class="contact-bottom" href="mailto:info@example.com">
+                info@example.com</a
               >
             </li>
             <li>
-              <a class="phone-bottom" href="tel:+48111111111"
+              <a class="contact-bottom" href="tel:+48111111111"
                 >+48 111 111 111</a
               >
             </li>
           </ul>
         </address>
+      </div>
+        <div>
+          <h4 class="footer-header">Dołącz do Nas</h4>
+          <ul class="footer-icons">
+              <li>
+                  <a href="#">
+                      <svg class="footer-icon">
+                          <use xlink:href="./images/sprite.svg#instagram-logo" width="20" height="20" x="12"
+                              y="12"></use>
+                      </svg>
+                  </a>
+              </li>
+              <li>
+                  <a href="#">
+                      <svg class="footer-icon">
+                          <use xlink:href="./images/sprite.svg#twitter-logo" width="20" height="20" x="12" y="12">
+                          </use>
+                      </svg>
+                  </a>
+              </li>
+              <li>
+                  <a href="#">
+                      <svg class="footer-icon">
+                          <use xlink:href="./images/sprite.svg#facebook-logo" width="20" height="20" x="12" y="12">
+                          </use>
+                      </svg>
+                  </a>
+              </li>
+              <li>
+                  <a href="#">
+                      <svg class="footer-icon">
+                          <use xlink:href="./images/sprite.svg#linkin-logo" width="20" height="20" x="12" y="12">
+                          </use>
+                      </svg>
+                  </a>
+              </li>
+          </ul>
+      </div>
+  </div>
+
       </section>
     </footer>
   </body>
