--- a/index.html
+++ b/index.html
@@ -172,24 +172,40 @@
               />
               <h3 class="name">John Doe</h3>
               <span class="job">Product Designer</span>
-              <div class="team-card-icons">
-                <svg class="card-icons">
-                    <use xlink:href="./images/sprite.svg#instagram-logo" width="20" height="20" x="12"
-                        y="12"></use>
-                </svg>
-                <svg class="card-icons">
-                    <use xlink:href="./images/sprite.svg#twitter-logo" width="20" height="20" x="12"
-                        y="12"></use>
-                </svg>
-                <svg class="card-icons">
-                    <use xlink:href="./images/sprite.svg#facebook-logo" width="20" height="20" x="12"
-                        y="12"></use>
-                </svg>
-                <svg class="card-icons">
-                    <use xlink:href="./images/sprite.svg#linkin-logo" width="20" height="20" x="12"
-                        y="12"></use>
-                </svg>
-            </div>
+              <ul class="team-card-icons">
+                <li>
+                    <a href="#">
+                        <svg class="card-icons">
+                            <use xlink:href="./images/sprite.svg#instagram-logo" width="20" height="20" x="12"
+                                y="12"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg class="card-icons">
+                            <use xlink:href="./images/sprite.svg#twitter-logo" width="20" height="20" x="12" y="12">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg class="card-icons">
+                            <use xlink:href="./images/sprite.svg#facebook-logo" width="20" height="20" x="12" y="12">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg class="card-icons">
+                            <use xlink:href="./images/sprite.svg#linkin-logo" width="20" height="20" x="12" y="12">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
             </li>
 
             <li class="team-li">
@@ -202,24 +218,40 @@
               <h3 class="name">John Doe</h3>
               <span class="job">Frontend Developer</span>
 
-              <div class="team-card-icons">
-                <svg class="card-icons">
-                    <use xlink:href="./images/sprite.svg#instagram-logo" width="20" height="20" x="12"
-                        y="12"></use>
-                </svg>
-                <svg class="card-icons">
-                    <use xlink:href="./images/sprite.svg#twitter-logo" width="20" height="20" x="12"
-                        y="12"></use>
-                </svg>
-                <svg class="card-icons">
-                    <use xlink:href="./images/sprite.svg#facebook-logo" width="20" height="20" x="12"
-                        y="12"></use>
-                </svg>
-                <svg class="card-icons">
-                    <use xlink:href="./images/sprite.svg#linkin-logo" width="20" height="20" x="12"
-                        y="12"></use>
-                </svg>
-            </div>
+              <ul class="team-card-icons">
+                <li>
+                    <a href="#">
+                        <svg class="card-icons">
+                            <use xlink:href="./images/sprite.svg#instagram-logo" width="20" height="20" x="12"
+                                y="12"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg class="card-icons">
+                            <use xlink:href="./images/sprite.svg#twitter-logo" width="20" height="20" x="12" y="12">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg class="card-icons">
+                            <use xlink:href="./images/sprite.svg#facebook-logo" width="20" height="20" x="12" y="12">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg class="card-icons">
+                            <use xlink:href="./images/sprite.svg#linkin-logo" width="20" height="20" x="12" y="12">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
             </li>
 
             <li class="team-li">
@@ -231,24 +263,40 @@
               />
               <h3 class="name">John Doe</h3>
               <span class="job">Marketing</span>
-              <div class="team-card-icons">
-                <svg class="card-icons">
-                    <use xlink:href="./images/sprite.svg#instagram-logo" width="20" height="20" x="12"
-                        y="12"></use>
-                </svg>
-                <svg class="card-icons">
-                    <use xlink:href="./images/sprite.svg#twitter-logo" width="20" height="20" x="12"
-                        y="12"></use>
-                </svg>
-                <svg class="card-icons">
-                    <use xlink:href="./images/sprite.svg#facebook-logo" width="20" height="20" x="12"
-                        y="12"></use>
-                </svg>
-                <svg class="card-icons">
-                    <use xlink:href="./images/sprite.svg#linkin-logo" width="20" height="20" x="12"
-                        y="12"></use>
-                </svg>
-            </div>
+              <ul class="team-card-icons">
+                <li>
+                    <a href="#">
+                        <svg class="card-icons">
+                            <use xlink:href="./images/sprite.svg#instagram-logo" width="20" height="20" x="12"
+                                y="12"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg class="card-icons">
+                            <use xlink:href="./images/sprite.svg#twitter-logo" width="20" height="20" x="12" y="12">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg class="card-icons">
+                            <use xlink:href="./images/sprite.svg#facebook-logo" width="20" height="20" x="12" y="12">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg class="card-icons">
+                            <use xlink:href="./images/sprite.svg#linkin-logo" width="20" height="20" x="12" y="12">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
 
             </li>
           
@@ -261,24 +309,40 @@
               />
               <h3 class="name">John Doe</h3>
               <span class="job">UI Designer</span>
-              <div class="team-card-icons">
-                <svg class="card-icons">
-                    <use xlink:href="./images/sprite.svg#instagram-logo" width="20" height="20" x="12"
-                        y="12"></use>
-                </svg>
-                <svg class="card-icons">
-                    <use xlink:href="./images/sprite.svg#twitter-logo" width="20" height="20" x="12"
-                        y="12"></use>
-                </svg>
-                <svg class="card-icons">
-                    <use xlink:href="./images/sprite.svg#facebook-logo" width="20" height="20" x="12"
-                        y="12"></use>
-                </svg>
-                <svg class="card-icons">
-                    <use xlink:href="./images/sprite.svg#linkin-logo" width="20" height="20" x="12"
-                        y="12"></use>
-                </svg>
-            </div>
+              <ul class="team-card-icons">
+              <li>
+                  <a href="#">
+                      <svg class="card-icons">
+                          <use xlink:href="./images/sprite.svg#instagram-logo" width="20" height="20" x="12"
+                              y="12"></use>
+                      </svg>
+                  </a>
+              </li>
+              <li>
+                  <a href="#">
+                      <svg class="card-icons">
+                          <use xlink:href="./images/sprite.svg#twitter-logo" width="20" height="20" x="12" y="12">
+                          </use>
+                      </svg>
+                  </a>
+              </li>
+              <li>
+                  <a href="#">
+                      <svg class="card-icons">
+                          <use xlink:href="./images/sprite.svg#facebook-logo" width="20" height="20" x="12" y="12">
+                          </use>
+                      </svg>
+                  </a>
+              </li>
+              <li>
+                  <a href="#">
+                      <svg class="card-icons">
+                          <use xlink:href="./images/sprite.svg#linkin-logo" width="20" height="20" x="12" y="12">
+                          </use>
+                      </svg>
+                  </a>
+              </li>
+          </ul>
             </li>
           </ul>
         </div>
